fix: исправлены тесты